upgraded for Java 17